Rollback: Reverted landing page content and styles to the state before the SEO overhaul.

--- a/website/en/index.html
+++ b/website/en/index.html
@@ -39,96 +39,32 @@
 
     <main>
         <section class="hero">
+            <div class="hero-image-background">
+                <img src="../images/demon_hero.png" alt="Background">
+            </div>
             <div class="hero-content">
-                <h1 class="gradient-text">Content Scraper Premium</h1>
-                <p>Professional content automation for Telegram. Clone, filter, and scale your channels 24/7 with zero
-                    effort.</p>
+                <h1>Clone Telegram Channels<br><span class="gradient-text">In Real-Time</span></h1>
+                <p>The ultimate tool for content automated mirroring. Clone media, albums, and text instantly with smart
+                    modification rules.</p>
                 <div class="hero-btns">
-                    <a href="contact.html" class="btn-primary">Buy Premium Now</a>
-                    <a href="docs.html" class="btn-secondary">Documentation</a>
+                    <a href="../content-scraper-premium.zip" class="btn-primary" download>Download Now</a>
+                    <a href="docs.html" class="btn-secondary">Learn More</a>
                 </div>
             </div>
-
             <div class="hero-visual">
-                <div class="hero-image-background">
-                    <img src="../images/demon_icon.png" alt="Neon Demon Background">
-                </div>
+                <img src="../images/demon_hero.png" alt="Neon Demon" class="hero-main-img">
                 <div class="hero-visual-overlay glass">
                     <div class="code-preview">
-                        <p><span class="c-purple">import</span> scraper</p>
-                        <p><span class="c-blue">bot</span> = scraper.<span class="c-yellow">PremiumBot</span>()</p>
-                        <p><span class="c-blue">bot</span>.<span class="c-yellow">start_monitoring</span>()</p>
-                        <p><span class="c-green"># Status: 24/7 Active</span></p>
-                        <p><span class="c-orange">messages_cloned:</span> 12,402</p>
-                    </div>
-                </div>
-                <!-- Main Demon Hero Image -->
-                <img src="../images/hero_demon.png" alt="Cyber Demon" class="hero-main-img">
-            </div>
-        </section>
-
-        <!-- New Professional Content Section: About -->
-        <section class="content-section">
-            <div class="info-block">
-                <div class="info-text">
-                    <h2>Infrastructure for <span class="text-accent">Scalable Media Business</span></h2>
-                    <p>In the current landscape of Telegram marketing, the advantage belongs to those who automate
-                        operational processes. Content Scraper Premium is a professional solution for creating and
-                        managing distributed channel networks with minimal overhead.</p>
-                    <p>Our system provides seamless real-time monitoring and content replication, allowing companies to
-                        focus on strategic growth and monetization while delegating technical routine to reliable
-                        software.</p>
-                </div>
-                <div class="info-image-box">
-                    <img src="../images/business_network.png"
-                        alt="Prompt: High-tech abstract 3D visualization of a global data network, glowing purple fiber optic lines, dark elegant background, sleek corporate tech aesthetic, clean lines, cinematic lighting, 16:9, 8k resolution.">
-                </div>
-            </div>
-
-            <div class="info-block reverse">
-                <div class="info-text">
-                    <h2>Precision Engineering in <span class="text-accent">Content Processing</span></h2>
-                    <p>We offer more than just data copying. Our technology stack includes intelligent filters and a
-                        proprietary media conversion system. Transforming standard video into Video Notes (Round Videos)
-                        ensures audience engagement through a native presence effect.</p>
-                    <p>Every message undergoes multi-level scrubbing and adaptation, guaranteeing brand integrity and
-                        the removal of competitor traces from your media infrastructure.</p>
-                </div>
-                <div class="info-image-box">
-                    <img src="../images/content_optimization.png"
-                        alt="Prompt: Macro photography of a futuristic glass processor with glowing purple energy circuits inside, abstract digital transformation, depth of field, premium tech look, dark ambient lighting, 16:9.">
-                </div>
-            </div>
-        </section>
-
-        <!-- New Section: Use Cases -->
-        <section class="use-cases-section">
-            <div class="content-section" style="padding-top: 0; padding-bottom: 0;">
-                <h2 style="text-align: center; font-family: 'Unbounded', sans-serif; margin-bottom: 4rem;">Who is <span
-                        class="text-accent">Premium</span> for?</h2>
-                <div class="use-cases-grid">
-                    <div class="use-case-card glass">
-                        <div class="icon">📈</div>
-                        <h3>Network Owners</h3>
-                        <p>Manage dozens of channels simultaneously. Scale your network without searching for extra
-                            content managers. One script replaces an entire department.</p>
-                    </div>
-                    <div class="use-case-card glass">
-                        <div class="icon">💰</div>
-                        <h3>Affiliate Marketers</h3>
-                        <p>Instantly create "mirrors" of popular channels to drive traffic. Automatic replacement of
-                            affiliate links and cloaking. Pure profit, no routine.</p>
-                    </div>
-                    <div class="use-case-card glass">
-                        <div class="icon">📰</div>
-                        <h3>News Aggregators</h3>
-                        <p>Be the first. The script intercepts news from private sources instantly. Filter out the noise
-                            and keep only the most important for your audience.</p>
+                        <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
+                                class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
+                        <div class="line"><span class="c-green">// Real-time monitoring active</span></div>
+                        <div class="line"><span class="c-blue">Processing</span> message: <span
+                                class="c-orange">#4829</span></div>
+                        <div class="line">Status: <span class="c-green">Cloned ✅</span></div>
                     </div>
                 </div>
             </div>
         </section>
-
 
         <section id="features" class="features">
             <h2>Professional Features for Telegram Business</h2>
