--- a/website/index.html
+++ b/website/index.html
@@ -38,96 +38,31 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="gradient-text">Content Scraper Premium</h1>
-                <p>Профессиональная автоматизация контента в Telegram. Клонируйте, фильтруйте и масштабируйте свои
-                    каналы 24/7 без лишних усилий.</p>
+                <h1>Масштабируйте свой контент в <span>Telegram</span></h1>
+                <p>Профессиональный инструмент для автоматического клонирования каналов, обхода ограничений и глубокой
+                    аналитики контента.</p>
                 <div class="hero-btns">
-                    <a href="contact.html" class="btn-primary">Купить Premium</a>
+                    <a href="content-scraper-premium.zip" class="btn-primary" download>Начать работу</a>
                     <a href="docs.html" class="btn-secondary">Документация</a>
                 </div>
             </div>
-
             <div class="hero-visual">
                 <div class="hero-image-background">
-                    <img src="images/demon_icon.png" alt="Neon Demon Background">
+                    <img src="images/demon_hero.png" alt="Background">
                 </div>
+                <img src="images/demon_hero.png" alt="Neon Demon" class="hero-main-img">
                 <div class="hero-visual-overlay glass">
                     <div class="code-preview">
-                        <p><span class="c-purple">import</span> scraper</p>
-                        <p><span class="c-blue">bot</span> = scraper.<span class="c-yellow">PremiumBot</span>()</p>
-                        <p><span class="c-blue">bot</span>.<span class="c-yellow">start_monitoring</span>()</p>
-                        <p><span class="c-green"># Status: 24/7 Active</span></p>
-                        <p><span class="c-orange">messages_cloned:</span> 12,402</p>
-                    </div>
-                </div>
-                <!-- Main Demon Hero Image -->
-                <img src="images/hero_demon.png" alt="Cyber Demon" class="hero-main-img">
-            </div>
-        </section>
-
-        <!-- New Professional Content Section: About -->
-        <section class="content-section">
-            <div class="info-block">
-                <div class="info-text">
-                    <h2>Инфраструктура для <span class="text-accent">масштабируемого медиа-бизнеса</span></h2>
-                    <p>В современных реалиях Telegram-маркетинга преимущество получает тот, кто автоматизирует
-                        операционные процессы. Content Scraper Premium — это профессиональное решение для создания и
-                        управления распределенными сетями каналов с минимальными издержками.</p>
-                    <p>Наша система обеспечивает бесперебойный мониторинг и репликацию контента в режиме реального
-                        времени, позволяя компаниям фокусироваться на стратегическом развитии и монетизации, делегируя
-                        техническую рутину надежному ПО.</p>
-                </div>
-                <div class="info-image-box">
-                    <img src="images/business_network.png"
-                        alt="Prompt: High-tech abstract 3D visualization of a global data network, glowing purple fiber optic lines, dark elegant background, sleek corporate tech aesthetic, clean lines, cinematic lighting, 16:9, 8k resolution.">
-                </div>
-            </div>
-
-            <div class="info-block reverse">
-                <div class="info-text">
-                    <h2>Прецизионная инженерия <span class="text-accent">обработки контента</span></h2>
-                    <p>Мы предлагаем больше, чем просто копирование данных. Наш стек технологий включает
-                        интеллектуальные фильтры и проприетарную систему конвертации медиа. Преобразование обычного
-                        видео в формат Video Notes (Кружочки) обеспечивает лояльность аудитории через эффект нативного
-                        присутствия.</p>
-                    <p>Каждое сообщение проходит через многоуровневую очистку и адаптацию, что гарантирует чистоту
-                        вашего бренда и отсутствие следов присутствия конкурентов в вашей медиа-инфраструктуре.</p>
-                </div>
-                <div class="info-image-box">
-                    <img src="images/content_optimization.png"
-                        alt="Prompt: Macro photography of a futuristic glass processor with glowing purple energy circuits inside, abstract digital transformation, depth of field, premium tech look, dark ambient lighting, 16:9.">
-                </div>
-            </div>
-        </section>
-
-        <!-- New Section: Use Cases -->
-        <section class="use-cases-section">
-            <div class="content-section" style="padding-top: 0; padding-bottom: 0;">
-                <h2 style="text-align: center; font-family: 'Unbounded', sans-serif; margin-bottom: 4rem;">Для кого мы
-                    создали <span class="text-accent">Premium?</span></h2>
-                <div class="use-cases-grid">
-                    <div class="use-case-card glass">
-                        <div class="icon">📈</div>
-                        <h3>Владельцы Сетей</h3>
-                        <p>Управляйте десятками каналов одновременно. Масштабируйте свою сетку без поиска дополнительных
-                            контент-менеджеров. Один скрипт заменит целый отдел сотрудников.</p>
-                    </div>
-                    <div class="use-case-card glass">
-                        <div class="icon">💰</div>
-                        <h3>Арбитражники</h3>
-                        <p>Мгновенное создание "зеркал" популярных каналов для слива трафика. Автоматическая замена
-                            партнерских ссылок и клоакинг. Чистый профит без рутины.</p>
-                    </div>
-                    <div class="use-case-card glass">
-                        <div class="icon">📰</div>
-                        <h3>Новостные Агрегаторы</h3>
-                        <p>Будьте первым. Скрипт перехватывает новости из закрытых источников моментально. Фильтруйте
-                            мусор и оставляйте только самое важное для вашей аудитории.</p>
+                        <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
+                                class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
+                        <div class="line"><span class="c-green">// Мониторинг запущен</span></div>
+                        <div class="line"><span class="c-blue">Обработка</span> сообщения: <span
+                                class="c-orange">#4829</span></div>
+                        <div class="line">Статус: <span class="c-green">Клонировано ✅</span></div>
                     </div>
                 </div>
             </div>
         </section>
-
 
         <section id="features" class="features">
             <h2>Профессиональный функционал для Telegram-бизнеса</h2>
