Content Integration: Added Use Cases and Infrastructure sections between features and steps. Used Telegram-centric visuals.

--- a/website/en/index.html
+++ b/website/en/index.html
@@ -138,6 +138,63 @@
             </div>
         </section>
 
+        <section id="features" class="features">
+            <!-- ... entries ... -->
+        </section>
+
+        <!-- New Section: Use Cases -->
+        <section class="use-cases-section">
+            <div class="content-section">
+                <h2 style="text-align: center; font-family: 'Unbounded', sans-serif; margin-bottom: 4rem;">Who is <span
+                        class="text-accent">Premium</span> for?</h2>
+                <div class="use-cases-grid">
+                    <div class="use-case-card glass">
+                        <div class="icon">📈</div>
+                        <h3>Network Owners</h3>
+                        <p>Manage dozens of channels simultaneously. Scale your network without searching for extra
+                            content managers. One script replaces an entire department.</p>
+                    </div>
+                    <div class="use-case-card glass">
+                        <div class="icon">💰</div>
+                        <h3>Affiliate Marketers</h3>
+                        <p>Instantly create "mirrors" of popular channels to drive traffic. Automatic replacement of
+                            affiliate links and cloaking. Pure profit, no routine.</p>
+                    </div>
+                    <div class="use-case-card glass">
+                        <div class="icon">📰</div>
+                        <h3>News Aggregators</h3>
+                        <p>Be the first. The script intercepts news from private sources instantly. Filter out the noise
+                            and keep only the most important for your audience.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- New Section: Infrastructure & Tech -->
+        <section class="content-section" style="padding-top: 0;">
+            <div class="info-block">
+                <div class="info-text">
+                    <h2>Infrastructure for <span class="text-accent">Scalable Media Business</span></h2>
+                    <p>Content Scraper Premium is a professional solution for creating and managing distributed Telegram
+                        channel networks. We provide seamless real-time content replication and management.</p>
+                </div>
+                <div class="info-image-box">
+                    <img src="../images/Telegram_logos_in_cloud.png" alt="Telegram Infrastructure">
+                </div>
+            </div>
+
+            <div class="info-block reverse">
+                <div class="info-text">
+                    <h2>Beyond Just <span class="text-accent">Data Copying</span></h2>
+                    <p>Our system includes proprietary technology for Video Notes conversion. This turns standard media
+                        into "live" personal messages, significantly boosting subscriber engagement.</p>
+                </div>
+                <div class="info-image-box">
+                    <img src="../images/video_conversion.png" alt="Video Conversion Tech">
+                </div>
+            </div>
+        </section>
+
         <section id="how-it-works" class="steps">
             <h2>How It Works</h2>
             <div class="step-container">
