--- a/website/index.html
+++ b/website/index.html
@@ -136,6 +136,64 @@
             </div>
         </section>
 
+        <section id="features" class="features">
+            <!-- ... entries ... -->
+        </section>
+
+        <!-- New Section: Use Cases -->
+        <section class="use-cases-section">
+            <div class="content-section">
+                <h2 style="text-align: center; font-family: 'Unbounded', sans-serif; margin-bottom: 4rem;">Для кого мы
+                    создали <span class="text-accent">Premium?</span></h2>
+                <div class="use-cases-grid">
+                    <div class="use-case-card glass">
+                        <div class="icon">📈</div>
+                        <h3>Владельцы Сетей</h3>
+                        <p>Управляйте десятками каналов одновременно. Масштабируйте свою сетку без поиска дополнительных
+                            контент-менеджеров. Один скрипт заменит целый отдел сотрудников.</p>
+                    </div>
+                    <div class="use-case-card glass">
+                        <div class="icon">💰</div>
+                        <h3>Арбитражники</h3>
+                        <p>Мгновенное создание "зеркал" популярных каналов для слива трафика. Автоматическая замена
+                            партнерских ссылок и клоакинг. Чистый профит без рутины.</p>
+                    </div>
+                    <div class="use-case-card glass">
+                        <div class="icon">📰</div>
+                        <h3>Новостные Агрегаторы</h3>
+                        <p>Будьте первым. Скрипт перехватывает новости из закрытых источников моментально. Фильтруйте
+                            мусор и оставляйте только самое важное для вашей аудитории.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- New Section: Infrastructure & Tech -->
+        <section class="content-section" style="padding-top: 0;">
+            <div class="info-block">
+                <div class="info-text">
+                    <h2>Инфраструктура для <span class="text-accent">масштабируемого медиа-бизнеса</span></h2>
+                    <p>Content Scraper Premium — это профессиональное решение для создания и управления распределенными
+                        сетями Telegram-каналов. Мы обеспечиваем бесперебойную репликацию контента в режиме реального
+                        времени.</p>
+                </div>
+                <div class="info-image-box">
+                    <img src="images/Telegram_logos_in_cloud.png" alt="Telegram Infrastructure">
+                </div>
+            </div>
+
+            <div class="info-block reverse">
+                <div class="info-text">
+                    <h2>Больше чем просто <span class="text-accent">копирование</span></h2>
+                    <p>Наша система включает проприетарную технологию конвертации в Video Notes. Это превращает обычный
+                        контент в "живое" сообщение, значительно повышая лояльность ваших подписчиков.</p>
+                </div>
+                <div class="info-image-box">
+                    <img src="images/video_conversion.png" alt="Video Conversion Tech">
+                </div>
+            </div>
+        </section>
+
         <section id="how-it-works" class="steps">
             <h2>Как это работает</h2>
             <div class="step-container">
