--- a/website/en/docs.html
+++ b/website/en/docs.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="../images/demon_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Documentation | Content Scraper Premium - Setup & Advanced Features</title>
     <meta name="description"
