--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="images/demon_icon.png?v=1" />
+    <link rel="icon" type="image/png" href="images/demon_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content Scraper | Premium Telegram Tools</title>
     <!-- Cache busting: v=3 -->
