--- a/website/pricing.html
+++ b/website/pricing.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="images/demon_icon.png?v=1" />
+    <link rel="icon" type="image/png" href="images/demon_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pricing | Content Scraper Premium Plans</title>
     <meta name="description"
